# controllers/api/v1/user.go
@@ -25,17 +25,36 @@ type (
 	}
 )
 
+// @Summary アカウント削除
+// @Description アカウントを削除します。
+// @ID delete-v1-user
+// @Produce json
+// @Security AccessToken
+// @Success 200 {object} models.APIBase
+// @Failure 400 {object} models.APIBase
+// @Router /api/v1/user [delete]
 func DeleteUser(c echo.Context) error {
 	defer api.DeferGenericError(c)
 
 	user := c.Get("user").(*models.User)
-	if err := models.DeleteUser(user); err == nil {
-		return c.JSON(http.StatusOK, &models.APIBase{api.GenericOK})
-	} else {
+	userName := user.UserName
+	if err := models.DeleteUser(user); err != nil {
 		return c.JSON(http.StatusOK, &models.APIBase{api.GenericError})
 	}
+	if err := models.GetButimiListByUserName(userName); err != nil {
+		return c.JSON(http.StatusOK, &models.APIBase{api.GenericError})
+	}
+	return c.JSON(http.StatusOK, &models.APIBase{api.GenericOK})
 }
 
+// @Summary アカウント登録
+// @Description アカウントを登録します。このAPIは認証なしでアクセスできます。
+// @ID post-v1-user
+// @Produce json
+// @Param account body v1.UserRequest true "アカウント情報"
+// @Success 200 {object} v1.UserResponse
+// @Failure 400 {object} models.APIBase
+// @Router /api/v1/user [post]
 func PostUser(c echo.Context) error {
 	defer api.DeferGenericError(c)
 
